--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "Sohan <sohanshetty2001@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@types/mongodb": "^4.0.7",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
